--- a/Song Selector.css
+++ b/Song Selector.css
@@ -1,22 +1,28 @@
 * {
 margin: none;
+/* border: 1px solid black; */
+
 }
 
 body {
-    background-color: purple;
+    /* background-image: linear-gradient(to top, purple, white); */
+    background-color: rgb(230, 234, 241);
     margin-left: 10%;
     margin-right: 10%;
+    /* margin: auto; */
 }
 
-div {
-    background-color: rgb(68, 10, 68);
+.purple {
+    /* background-color: rgb(156, 9, 169); */
+    /* background-color: rgb(22, 22, 198); */
+    /* background-color: white; */
 }
 
 h1 {
     text-align: center;
-    font-family: fantasy;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 55px;
-    color: rgb(240, 230, 165);
+    color: rgb(6, 6, 82);
     font-weight: 10px;
     text-decoration: underline;
 }
@@ -25,7 +31,24 @@ h1 {
     /* width: 100%; */
     /* border-radius: 100px; */
     /* color: rgb(240, 230, 165); */
-    padding: 5%;
+    padding: 1rem 2rem;
+    justify-content: space-between;
+}
+
+.shuffle {
+    display: flex;
+    justify-content: center;
+    /* border: 1px solid black; */
+    padding: 3rem;
+}
+
+.shuffle-btn {
+    height: 5rem;
+    width: 22rem;
+    border-radius: 15px;
+    margin: .1rem auto;
+    font-size: 2rem;
+    /* font-stretch: wider; */
 }
 
 .result {
@@ -36,11 +59,20 @@ h1 {
     width: 45%;
     display: inline-block;
     text-align: justify;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.info-box {
+    text-align: center;
 }
 
 .previous {
     display: flex;
     justify-content: center;
+    padding-bottom: 2rem;
 }
 
 .result-six {
@@ -71,4 +103,23 @@ h1 {
 .five {
     margin-left: 27.5%;
 
+}
+
+img {
+    height: 125px;
+    width: 125px;
+    float: left;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.interaction {
+    display: flex;
+    align-content: space-between;
+}
+
+.interaction-btn {
+    margin: auto;
+    height: 3rem;
+    width: 15rem;
 }
