--- a/Song Selector.css
+++ b/Song Selector.css
@@ -9,7 +9,9 @@ body {
     background-color: rgb(230, 234, 241);
     margin-left: 10%;
     margin-right: 10%;
+    padding-bottom: 5rem;
     /* margin: auto; */
+    /* border: 1px solid black; */
 }
 
 .purple {
@@ -123,3 +125,8 @@ img {
     height: 3rem;
     width: 15rem;
 }
+
+.hidden {
+    content-visibility: hidden;
+}
+
