--- a/Song Selector.css
+++ b/Song Selector.css
@@ -67,6 +67,16 @@ p {
     margin: .1rem auto;
     font-size: 2rem;
     /* font-stretch: wider; */
+    color: white;
+    background-color:rgb(108, 108, 186);
+}
+
+.shuffle-btn:hover {
+    background-color: rgb(37, 37, 129)
+}
+
+.shuffle-btn:active {
+    background-color: rgb(6, 6, 82)
 }
 
 hr {
@@ -75,8 +85,8 @@ hr {
 
 .result {
     border: 1px solid black;
-    /* background-color: rgb(240, 230, 165); */
-    background-color: white;
+    background-color: rgb(214, 227, 229);
+    /* background-color: white; */
     border-radius: 15px;
     width: 45%;
     display: inline-block;
