--- a/Song Selector.css
+++ b/Song Selector.css
@@ -43,6 +43,9 @@ h1 {
 
 p {
     color:rgb(6, 6, 82);
+    text-decoration: underline;
+    /* border-bottom: 1px solid black; */
+    font-size: 20px;
 }
 
 .shuffle-box {
