--- a/Song Selector.css
+++ b/Song Selector.css
@@ -43,9 +43,10 @@ h1 {
 
 p {
     color:rgb(6, 6, 82);
-    text-decoration: underline;
+    /* text-decoration: underline; */
     /* border-bottom: 1px solid black; */
     font-size: 20px;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
 
 .shuffle-box {
@@ -79,7 +80,9 @@ p {
 }
 
 .shuffle-btn:active {
-    background-color: rgb(6, 6, 82)
+    /* background-color: rgb(6, 6, 82) */
+    transform: translate(0.2%, 3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
 
 hr {
@@ -141,7 +144,7 @@ hr {
 }
 
 img {
-    height: 125px;
+    height: 130px;
     width: 125px;
     float: left;
     margin-top: 3%;
@@ -161,6 +164,7 @@ img {
 }
 
 .hidden {
-    content-visibility: hidden;
+    /* content-visibility: hidden; */
+    display: none;
 }
 
