--- a/Song Selector.css
+++ b/Song Selector.css
@@ -101,11 +101,13 @@ hr {
     margin-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    max-height: 15%;
+    max-width: 45%;
 }
 
 .info-box {
     text-align: center;
+    max-width: 100%;
+    max-height: 20%;
 }
 
 .previous {
@@ -145,11 +147,11 @@ hr {
 }
 
 img {
-    height: 130px;
-    width: 125px;
+    height: 20%;
+    width: 20%;
     float: left;
     margin-top: 3%;
-    margin-bottom: 3%;
+    /* margin-bottom: 3%; */
 }
 
 .interaction {
