--- a/Song Selector.css
+++ b/Song Selector.css
@@ -30,7 +30,7 @@ body {
 h1 {
     text-align: center;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 55px;
+    font-size: 45px;
     /* color: rgb(6, 6, 82); */
     color: rgb(230, 234, 241);
     font-weight: 10px;
@@ -99,15 +99,16 @@ hr {
     text-align: justify;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
     max-width: 45%;
+    min-height: 20%;
 }
 
 .info-box {
     text-align: center;
     max-width: 100%;
-    max-height: 20%;
+    /* max-height: 20%; */
 }
 
 .previous {
@@ -147,8 +148,8 @@ hr {
 }
 
 img {
-    height: 20%;
-    width: 20%;
+    height: 12%;
+    width: 12%;
     float: left;
     margin-top: 3%;
     /* margin-bottom: 3%; */
