--- a/Song Selector.css
+++ b/Song Selector.css
@@ -101,8 +101,7 @@ hr {
     text-align: justify;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding: 0.5rem;
     max-width: 49%;
     /* max-height: 1%; */
     /* min-height: 20%; */
@@ -155,9 +154,7 @@ img {
     height: 25%;
     width: 25%;
     float: left;
-    margin-top: 5%;
-    border-radius: 10%;
-    border: solid 1px black;
+    /* margin-top: 1%; */
     /* display: inline-block; */
     /* margin: auto; */
     /* margin-bottom: 13%; */
