--- a/Song Selector.css
+++ b/Song Selector.css
@@ -55,6 +55,7 @@ p {
     /* color: rgb(240, 230, 165); */
     padding: 1rem;
     justify-content: space-between;
+    /* border: 1px solid black; */
 }
 
 .shuffle {
@@ -102,8 +103,8 @@ hr {
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 0.5rem;
-    max-width: 49%;
-    /* max-height: 1%; */
+    max-width: 46%;
+    max-height: 80%;
     /* min-height: 20%; */
 }
 
@@ -151,9 +152,10 @@ hr {
 }
 
 img {
-    height: 25%;
-    width: 25%;
+    height: 200px;
+    width: 200px;
     float: left;
+    object-fit: contain;
     /* margin-top: 1%; */
     /* display: inline-block; */
     /* margin: auto; */
