--- a/Song Selector.css
+++ b/Song Selector.css
@@ -19,6 +19,7 @@ body {
     background: linear-gradient(rgb(91, 109, 213), rgb(147, 170, 212), rgb(51, 76, 222));
     padding-bottom: 5rem;
     border-radius: 15px;
+    /* border: 1px solid black; */
 }
 
 .purple {
@@ -53,7 +54,7 @@ p {
     /* width: 100%; */
     /* border-radius: 100px; */
     /* color: rgb(240, 230, 165); */
-    padding: 1rem;
+    padding: 5rem;
     justify-content: space-between;
     /* border: 1px solid black; */
 }
@@ -96,8 +97,8 @@ hr {
     background: linear-gradient(rgb(171, 171, 171), rgb(220, 219, 219));
     /* background-color: white; */
     border-radius: 15px;
-    width: 46%;
-    height: 80%;
+    width: 40%;
+    height: 60%;
     display: inline-block;
     text-align: justify;
     margin-top: 1rem;
@@ -152,12 +153,12 @@ hr {
 }
 
 img {
-    height: 200px;
-    width: 200px;
+    height: 20%;
+    width: 20%;
     float: left;
     object-fit: contain;
     /* margin-top: 1%; */
-    /* display: inline-block; */
+    /* display: block; */
     /* margin: auto; */
     /* margin-bottom: 13%; */
 }
