--- a/Song Selector.css
+++ b/Song Selector.css
@@ -1,7 +1,8 @@
 :root {
-    --cream: #ffffff; /*Primary Background*/
-    --blue: #87CEEB; /*Accents, Buttons, Highlights*/
-    --gray: #D3D3D3; /*Text And Boarders*/
+    --blue: #87CEEB; /*Primary Background*/
+    --dark-blue: #1e82c4;
+    --cream: rgb(250, 240, 230); /*Accents, Buttons, Highlights*/
+    --gray: #89939E; /*Text And Boarders*/
     --gold: #FFDc00; /*Headings or Icons*/
 
     --lavender: #E6E6FA; /*warmer call to action button*/
@@ -20,6 +21,8 @@ body {
     /* margin-left: 10%;
     margin-right: 10%; */
     /* margin: auto; */
+    background-color: #1e82c4;
+    /* background-color: var(--blue); */
 
     /* border: 1px solid black; */
     /* border-radius: 15px; */
@@ -27,22 +30,15 @@ body {
 
 .page {
     /* background: linear-gradient(rgb(91, 109, 213), rgb(147, 170, 212), rgb(51, 76, 222)); */
-    background-color: white;
+    position: relative;
+    background-color: var(--dark-blue);
+    margin: 1% 3% 0 3%;
     padding-bottom: 5rem;
     border-radius: 15px;
-    /* border: 1px solid black; */
+    text-align: center;
+    /* border: 10px groove var(--blue); */
 }
 
-.logo {
-    width: 100%;
-    height: 15rem;
-    object-fit: contain;
-    padding: 3rem 0;
-    background-color: var(--blue);
-    border-radius: 5rem;
-    /* border: 1px solid black; */
-    grid-column: span 2;
-}
 
 h1 {
     text-align: center;
@@ -52,18 +48,47 @@ h1 {
     /* color: rgb(230, 234, 241); */
     font-weight: 10px;
     text-decoration: underline;
-    background: linear-gradient(rgb(6, 6, 82), rgb(21, 29, 146), rgb(20, 28, 101));
     margin: 0;
     padding: 2rem;
     border-radius: 15px 15px 0 0;
 }
 
 p {
-    color: black;
+    color: var(--gray);
     /* text-decoration: underline; */
     /* border-bottom: 1px solid black; */
     font-size: 20px;
     font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+.menu-btn {
+    position: absolute;
+    top: 1rem;
+    left: 2rem;
+}
+
+.menu-btn:hover {
+    cursor: pointer;
+    
+}
+
+.logo {
+    width: 40%;
+    /* background: linear-gradient(rgb(6, 6, 82), rgb(21, 29, 146), rgb(20, 28, 101)); */
+    background-color: var(--cream);
+    height: 10rem;
+    object-fit: contain;
+    margin: 3rem auto;
+    padding: 4rem 0;
+    border-radius: 5rem;
+    border: 10px double var(--blue);
+    grid-column: span 2;
+}
+
+.logo-box {
+    margin-bottom: 5rem;
+    width: 100%;
+    /* border: 1px solid black; */
 }
 
 .shuffle-box {
@@ -90,10 +115,9 @@ p {
     border-radius: 15px;
     margin: .1rem auto;
     font-size: 2rem;
-    /* font-stretch: wider; */
-    color: black;
-    background-color: var(--blue);
-    /* background-color:rgb(193, 193, 228); */
+    font-weight: bold;
+    border: 3px solid var(--blue);
+    background: linear-gradient(var(--lavender), var(--gray));
 }
 
 .shuffle-btn:hover {
@@ -112,10 +136,10 @@ hr {
 }
 
 .result {
-    /* background: linear-gradient(rgb(171, 171, 171), rgb(220, 219, 219)); */
-    background-color: #D3D3D3;
+    background-color: var(--cream);
+    /* background: linear-gradient(225deg, rgb(6, 6, 82), rgb(21, 29, 146)); */
     border-radius: 15px;
-    border: 3px groove var(--blue);
+    border: 8px double var(--blue);
     width: 100%;
     height: 100%;
     display: grid;
@@ -129,10 +153,10 @@ hr {
 }
 
 .result5 {
-    /* background: linear-gradient(rgb(171, 171, 171), rgb(220, 219, 219)); */
-    background-color: #D3D3D3;
+    /* background: linear-gradient(135deg, rgb(6, 6, 82), rgb(21, 29, 146)); */
+    background-color: var(--cream);
     border-radius: 15px;
-    border: 3px groove var(--blue);
+    border: 8px double var(--blue);
     width: 50%;
     height: 90%;
     display: grid;
@@ -150,7 +174,7 @@ hr {
     height: 10rem;
     object-fit: contain;
     padding: 0 3rem;
-    border-right: 3px solid var(--blue);
+    border-right: 3px solid var(--gold);
 }
 
 .info-box {
@@ -197,13 +221,16 @@ hr {
 }
 
 .prev-result {
-    background: linear-gradient(rgb(171, 171, 171), rgb(220, 219, 219));
+    /* background: linear-gradient(rgb(6, 6, 82), rgb(21, 29, 146), rgb(20, 28, 101)); */
+    background-color: var(--cream);
     border-radius: 15px;
+    border: 8px double var(--blue);
     padding: 1rem;
     width: 30%;
     height: 100%;
     align-items: center;
     justify-items: center;
+    font-weight: bold;
     /* padding: 0.5rem; */
     box-shadow: 5px 5px 10px #424242;
 }
@@ -218,9 +245,16 @@ hr {
     margin: auto;
     height: 3rem;
     width: 15rem;
-    border-radius: 5%;
-    background-color: var(--blue);
+    border-radius: 10%;
+    font-weight: bold;
+    /* background-color: var(--blue); */
+    background: linear-gradient(var(--lavender), var(--gray));
     /* background-color:rgb(193, 193, 228); */
+}
+
+.interaction-btn:hover {
+    background-color: var(--gold);
+    color: white;
 }
 
 .hidden {
@@ -234,4 +268,8 @@ hr {
     border-radius: 15px;
     background-color: rgb(214, 227, 229);
     padding: 1rem;
+}
+
+.song-list-child {
+    text-align: left;
 }
