--- a/Song Selector.css
+++ b/Song Selector.css
@@ -30,7 +30,7 @@ body {
 
 .page {
     /* background: linear-gradient(rgb(91, 109, 213), rgb(147, 170, 212), rgb(51, 76, 222)); */
-    position: relative;
+    /* position: relative; */
     background-color: var(--dark-blue);
     margin: 1% 3% 0 3%;
     padding-bottom: 5rem;
@@ -63,8 +63,9 @@ p {
 
 .menu-btn {
     position: absolute;
-    top: 1rem;
-    left: 2rem;
+    top: 2rem;
+    left: 3rem;
+    z-index: 4;
 }
 
 .menu-btn:hover {
@@ -72,13 +73,23 @@ p {
     
 }
 
-.logo {
-    width: 40%;
-    /* background: linear-gradient(rgb(6, 6, 82), rgb(21, 29, 146), rgb(20, 28, 101)); */
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 25rem;
     background-color: var(--cream);
-    height: 10rem;
+}
+
+.logo {
+    width: 80%;
+    /* background: linear-gradient(rgb(6, 6, 82), rgb(21, 29, 146), rgb(20, 28, 101)); */
+    /* background: linear-gradient(120deg, var(--cream), var(--blue)); */
+    background-color: var(--cream);
+    height: 40rem;
     object-fit: contain;
-    margin: 3rem auto;
+    margin: 8rem auto;
     padding: 4rem 0;
     border-radius: 5rem;
     border: 10px double var(--blue);
