--- a/Song Selector.css
+++ b/Song Selector.css
@@ -68,8 +68,8 @@ p {
 
 .menu-btn {
     position: absolute;
-    top: 2rem;
-    left: 3rem;
+    top: 1rem;
+    left: 2rem;
     z-index: 4;
 }
 
@@ -84,15 +84,19 @@ p {
     left: -25%;
     height: 100%;
     width: 25rem;
-    background-color: var(--blue);
+    color: black;
+    background-color: rgb(249, 249, 230);
     border: 5px double var(--dark-blue);
     box-shadow: 5px 5px 10px #424242;
     transition: left 1s ease ;
 }
 
 .menu-title {
-    font-size: 4rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-size: 3rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--dark-blue);
+    color: var(--dark-gold);
+    text-decoration: none;
 }
 
 nav {
@@ -113,6 +117,10 @@ nav {
     background-color: var(--blue);
     color: white;
     font-weight: bold;
+}
+
+nav li {
+    text-decoration: underline;
 }
 
 .logo {
